			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: Make library(gensym) thread-safe.


VERSION 5.1.7 (Feb 02, 2003)
============================

  * FIXED: Don't call cleanup of deterministic foreign predicates after
    an abort.

  * FIXED: Bug #19: documentation and status of numbervars/3.  Richard
    O'Keefe and Lourens van der Meij.

  * FIXED: qsave_program/2: ensure the banner is a defined predicate.

  * FIXED: Bug #18: Initialisation problem for single-threaded version
    caused by the addition below.  Lourens van der Meij.

  * ADDED: Prolog flag emacs_inferior_process, which is set to true
    if SWI-Prolog is running as Emacs inferior process.  After comments
    from Michael Covington.

  * FIXED: include <time.h> in pl-stream.c (Anjo Anjewierden).

  * ENHANCED: downcase_atom/2 and upcase_atom/2 performance if both
    arguments are instantiated.

  * FIXED: symbol typo when compiling for threading on systems that do 
    not support recursive mutexes.

  * FIXED: Bug #7: Protocol of typed input in (Windows).  Tolga Konik.

  * ADDED: assume/1 (library(debug)) to call expand_goal/2 on arguments.

  * FIXED: Bug #9: GUI tracer handling string objects (Holger Kanwischer)

  * FIXED: Bug #8: module-specifier while listing declarations.
    Tolga Konik.

  * ADDED: Perform goal-expansion on 2nd argument of findall/3, bagof/3
    and setof/3.


VERSION 5.1.6 (Jan 17, 2003)
============================

  * ADDED: Using ?- set_prolog_flag(prompt_alternatives_no_bindings, true)
    the system prompts for alternative answers on the toplevel if the goal
    makes no bindings.  Requested by Paulo Moura.  Experimental.

  * MODIFIED: deterministic/0 has been replaced with deterministic/1.  It